--- a/main.scss
+++ b/main.scss
@@ -806,6 +806,13 @@ body {
       margin: 0.5rem 2rem;
     }
   }
+  .header-items {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
   .section-container-grid {
     grid-template-columns: auto;
     grid-template-rows: auto auto auto auto;
